<resources>

    <string name="app_name">Credit Card Helper</string>
    <string name="ecb">Enter Card Balance ($)</string>
    <string name="eyir">Enter Yearly Interest Rate (%)</string>
    <string name="emp">Enter Minimum Payment ($)</string>
    <string name="fcb">Final Card Balance ($)</string>
    <string name="mr">Months Remaining</string>
    <string name="ipwb">Interest Paid Will Be ($)</string>
    <string name="compute">Compute</string>
    <string name="clear">Clear</string>

</resources>
