<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@android:color/darker_gray"
        android:padding="4dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:onClick="Clear"
        android:background="@drawable/background"
        android:text="@string/clear" />

    <Button
        android:id="@+id/compute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clear"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:onClick="Compute"
        android:background="@drawable/background"
        android:text="@string/compute" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/compute"
        android:layout_below="@+id/appName"
        android:columnCount="2"
        android:rowCount="6" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:layout_row="0"
            android:text="@string/ecb"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:layout_row="1"
            android:text="@string/eyir"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:layout_row="2"
            android:text="@string/emp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:layout_row="3"
            android:text="@string/fcb"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:layout_row="4"
            android:text="@string/mr"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:layout_row="5"
            android:text="@string/ipwb"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/enterBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:layout_row="0"
            android:background="@drawable/background"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:padding="5dp" />

        <EditText
            android:id="@+id/enterRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:layout_row="1"
            android:background="@drawable/background"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:padding="5dp" />

        <EditText
            android:id="@+id/minPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:layout_row="2"
            android:background="@drawable/background"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:padding="5dp" />

        <EditText
            android:id="@+id/finalBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:layout_row="3"
            android:background="@drawable/background"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:padding="5dp" />

        <EditText
            android:id="@+id/monthsRemain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:layout_row="4"
            android:background="@drawable/background"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:padding="5dp" />

        <EditText
            android:id="@+id/interestRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:layout_row="5"
            android:background="@drawable/background"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:padding="5dp" />
    </GridLayout>

</RelativeLayout>